syntax = "proto3";

package yandex.cloud.priv.marketplace.v1alpha1;

import "google/api/annotations.proto";
import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/api/operation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/marketplace/v1alpha1/console;marketplace";

service ManagePartnerRequestsService {
  rpc ClosePartnerRequest (RequestIDRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
        metadata: "EmptyMetadata"
        response: "EmptyResponse"
    };
    option (google.api.http) = { post: "/marketplace/v1alpha1/console/manage/partner_requests/{request_id}:close" body: "*" };
  }
}

message RequestIDRequest {
  string request_id = 1;
}

message EmptyMetadata {}
message EmptyResponse {}
