syntax = "proto3";

package yandex.cloud.priv.support.v1;

import "google/api/annotations.proto";
import "yandex/cloud/api/operation.proto";
import "yandex/cloud/api/tools/options.proto";
import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/support/v1/ticket.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/support/v1/private;support";

service PrivateTicketService {
  rpc Create (CreateTicketPrivateRequest) returns (operation.Operation) {
    option (google.api.http) = { post: "/support/v1/private/tickets" };
    option (yandex.cloud.api.operation) = {
      metadata: "CreateTicketPrivateMetadata"
      response: "Ticket"
    };
    option (yandex.cloud.api.tools.method).lint_skip.http_query_parameters = true;
  };
}

message CreateTicketPrivateRequest {
  string cloud_id = 1;
  string summary = 2;
  string description = 3;
  Ticket.Type type = 4;
  repeated string attachment_ids = 5;
  Ticket.AccessType access_type = 6;
  string iam_user_id = 7;
  string user_agent = 8;
  string referrer = 9;
}

message CreateTicketPrivateMetadata {
  string ticket_id = 1;
}
