#pragma once

#include "public.h"

namespace NYT::NBus {

////////////////////////////////////////////////////////////////////////////////

IBusServerPtr CreateTcpBusServer(TTcpBusServerConfigPtr config);

////////////////////////////////////////////////////////////////////////////////

} // namespace NYT::NBus
